# RaceSimulationCPmodul2

./: AirRace.cpp  AirRace.h  Boots.cpp  Boots.h  Broomstick.cpp  Broomstick.h  CMakeLists.txt  Camel.cpp  Camel.h  Eagle.cpp  Eagle.h  FastC.cpp  FastC.h  HorseMan.cpp  HorseMan.h  MagicCarpet.cpp  MagicCarpet.h  MixRace.cpp  MixRace.h  Race.cpp  Race.h  RaceSimCPCMake.cpp  RaceSimCPCMake.h
